# ductfan-control

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
components/application/: CMakeLists.txt  application.cpp
components/application/include/: application.hpp
components/devcom/: CMakeLists.txt
components/ductouts/: CMakeLists.txt  ductouts.cpp
components/ductouts/include/: ductouts.hpp
components/ductsense/: CMakeLists.txt  ductsense.cpp  idf_component.yml
components/ductsense/include/: ductsense.hpp
components/sensors/: CMakeLists.txt
libs/: CMakeLists.txt
libs/devcom/: DevCom.h
libs/devcom/devices/: CMakeLists.txt  devices.hpp
libs/devcom/eventing/: CMakeLists.txt
libs/devcom/eventing/eventHandlers/: eventHandlers.cpp  eventHandlers.hpp
libs/devcom/eventing/eventManager/: CMakeLists.txt  eventManager.cpp  eventManager.hpp
libs/devcom/eventing/eventMessages/: eventMessages.cpp  eventMessages.hpp
libs/devcom/eventing/eventQueues/: eventQueues.cpp  eventQueues.hpp
libs/devcom/eventing/handlerQueues/: handlerQueues.cpp  handlerQueues.hpp
libs/devcom/outputs/: CMakeLists.txt  outputs.cpp  outputs.hpp
libs/devcom/sensors/: CMakeLists.txt
libs/tests/integration/AUnit/ButtonsTest/: Makefile
libs/tests/unit/: CMakeLists.txt  Catch2TestWithMainAndGMock.hpp  deviceTests.cpp  eventTests.cpp
main/: CMakeLists.txt  main.c  main.cpp
src/: DuctFanControl.h  sdkconfig.h
src/Devices/: Devices.cpp  Devices.hpp
src/devcom/: CMakeLists.txt  DevCom.h  DuctFanControl.h
src/devcom/devices/: devices.cpp
src/devcom/eventing/eventHandlers/: CMakeLists.txt  eventHandlers.cpp  eventHandlers.hpp
src/devcom/eventing/eventManager/: eventManager.cpp  eventManager.hpp
src/devcom/eventing/eventMessages/: CMakeLists.txt  eventMessages.cpp  eventMessages.hpp
src/devcom/eventing/eventQueues/: CMakeLists.txt  eventQueues.cpp  eventQueues.hpp
src/devcom/eventing/handlerQueues/: CMakeLists.txt  handlerQueues.cpp  handlerQueues.hpp
src/devcom/outputs/: CMakeLists.txt  outputs.cpp  outputs.hpp
src/devcom/sensors/: sensors.cpp  sensors.hpp
src/eventing/eventHandlers/: eventHandlers.hpp
src/eventing/eventQueues/: eventQueues.hpp
src/eventing/handlerQueues/: handlerQueues.hpp
src/outputs/: outputs.cpp  outputs.hpp
src/sensors/: sensors.cpp  sensors.hpp
tests/integration/AUnit/ButtonsTest/: ButtonsTest.ino
tests/unit/: MockScopeGuard.hpp  deviceTests.cpp  eventTests.cpp
